QPID-8241 : Remove use of javax.xml.bind.DatatypeConverter